[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/stages/MenuOptions.gd" type="Script" id=1]
[ext_resource path="res://graphics/images/bgtitle.jpg" type="Texture" id=2]
[ext_resource path="res://graphics/images/Logo.png" type="Texture" id=3]
[ext_resource path="res://fonts/vegur/Vegur-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/font/TitleFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/stages/Buttons/TitleScreenButtonGroup.tres" type="ButtonGroup" id=6]
[ext_resource path="res://scenes/sound/PlayerMusic.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/sound/PlayerSelection.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/sound/PlayerFocus.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxLine" id=3]
thickness = 10
vertical = true

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="MenuOptions" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -10, -150 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 288.0
margin_bottom = 512.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 44.0
margin_top = 50.0
margin_right = 244.0
margin_bottom = 200.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Botões" type="VBoxContainer" parent="."]
margin_left = 44.0
margin_top = 230.0
margin_right = 244.0
margin_bottom = 460.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Sound" type="CheckButton" parent="Botões"]
margin_top = 77.0
margin_right = 200.0
margin_bottom = 117.0
theme = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
pressed = true
text = "Sound"

[node name="Return" type="Button" parent="Botões"]
margin_top = 121.0
margin_right = 200.0
margin_bottom = 152.0
focus_neighbour_bottom = NodePath("../Highscores")
focus_next = NodePath("../Highscores")
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.460938, 0.460938, 0.460938, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.390625, 0.390625, 0.390625, 1 )
custom_colors/font_color_pressed = Color( 0.527344, 0.527344, 0.527344, 1 )
group = ExtResource( 6 )
text = "Return"

[node name="PlayerMusic" parent="." instance=ExtResource( 7 )]

[node name="PlayerSelection" parent="." instance=ExtResource( 8 )]

[node name="PlayerFocus" parent="." instance=ExtResource( 9 )]

[connection signal="focus_entered" from="Botões/Sound" to="." method="_on_Menu_focus_entered"]
[connection signal="mouse_entered" from="Botões/Sound" to="." method="_on_Sound_mouse_entered"]
[connection signal="toggled" from="Botões/Sound" to="." method="_on_Sound_toggled"]
[connection signal="mouse_entered" from="Botões/Return" to="." method="_on_Return_mouse_entered"]
[connection signal="pressed" from="Botões/Return" to="." method="_on_Button_pressed"]
